@@ -1,4 +1,4 @@
-/* $Id: group.c,v 1.5 2005-01-25 20:46:55 schaffner Exp $ */
+/* $Id: group.c,v 1.6 2005-07-22 11:01:35 chris Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -19,7 +19,7 @@ COPYRIGHT 1993-1998 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  */
 
 #ifdef RCS
-static char rcsid[] = "$Id: group.c,v 1.5 2005-01-25 20:46:55 schaffner Exp $";
+static char rcsid[] = "$Id: group.c,v 1.6 2005-07-22 11:01:35 chris Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -1219,7 +1219,6 @@ int med_save_group( char *filename, short *vertex_ids, short *segment_ids, int n
 }
 
 static char old_tmap_list[MAX_TEXTURES][13];
-static short tmap_xlate_table[MAX_TEXTURES];
 
 // -----------------------------------------------------------------------------
 // Load group will:
